@@ -7,9 +7,14 @@ What's New for OpenJPEG
 
 
 November 14, 2007
-! [FOD] First Patch by Callum Lerwick. Instead of reinventing realloc, j2k_read_sod now just uses opj_realloc in j2k.c
-		Second Patch by Callum Lerwick. This patch rearranges the largest memory allocations so they're allocated as 
+! [FOD] - First Patch by Callum Lerwick. Instead of reinventing realloc, j2k_read_sod now just uses opj_realloc in j2k.c
+		- Second Patch by Callum Lerwick. This patch rearranges the largest memory allocations so they're allocated as 
 		late as possible, and freed as soon as possible. This cuts memory usage by about half on two large test images.
+		- Third Patch by Callum Lerwick. The opj_tcd_cblk array is one of the largest allocations, because it
+		contains a bunch of static buffers. This also makes it a major source of cache thrashing. This patch allocates 
+		the buffers from the heap, and dynamically sizes them in the decoder. I have not yet managed to dynamically size 
+		them in the encoder, getting the decoder to do it was tricky enough... I also split opj_tcd_cblk_t into separate 
+		encode and decode versions. A lot of fields were not used by both, so this cuts its size even further.
 
 November 13, 2007
 ! [FOD] Patch by Dzonatas and Callum Lerwick.
